fix things with spacing for new navbar

--- a/static/css/custom-style.css
+++ b/static/css/custom-style.css
@@ -182,9 +182,10 @@ body > * {
 #form {
   border: 1px solid #dbdbdb;
   background: #fff;
+  margin-bottom: 20px;
 }
 #loginwall {
-  padding: 180px 0 0 0;
+  padding: 160px 0 0 0;
 }
 #landing-page {
   margin-top: 120px;
